<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">1_02_music_player</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_new_releases">New releases</string>
  <string name="msg_restore_purchases">Restore purchases</string>
  <string name="lbl_podval_caplella">Podval Caplella</string>
  <string name="lbl_download">Download</string>
  <string name="lbl_renaissance">Renaissance</string>
  <string name="lbl_843_tracks">843 tracks</string>
  <string name="lbl_23_albums">23 albums</string>
  <string name="lbl_bones">BONES</string>
  <string name="msg_this_is_not_a_test">This Is Not A Test</string>
  <string name="lbl_song_lyrics">Song lyrics</string>
  <string name="lbl_entangled">Entangled</string>
  <string name="lbl_home">Home</string>
  <string name="lbl_erlik_bachman">Erlik Bachman</string>
  <string name="lbl_4_db">4 dB</string>
  <string name="msg_free_for_3_months">Free for 3 months, then $12 a month</string>
  <string name="lbl_favorites">Favorites</string>
  <string name="lbl_she_is_coming">SHE IS COMING</string>
  <string name="lbl_250_hz">250 Hz</string>
  <string name="lbl_create_account">Create Account</string>
  <string name="msg_forgot_your_login">Forgot your login or password?</string>
  <string name="lbl_did_you_like_it">Did you like it</string>
  <string name="lbl_emika">Emika</string>
  <string name="msg_843_tracks_23">843 tracks . 23 albums</string>
  <string name="msg_low_frequency_gain">Low frequency gain</string>
  <string name="lbl_sign_in">Sign in</string>
  <string name="msg_the_cycle_continues">The Cycle Continues</string>
  <string name="lbl_default">Default</string>
  <string name="lbl_add_to_playlist">Add to Playlist</string>
  <string name="msg_enter_promo_code">Enter promo code</string>
  <string name="lbl_350_hz">350 Hz</string>
  <string name="lbl_club_music">Club music</string>
  <string name="lbl_adam_lambert">Adam Lambert</string>
  <string name="lbl_ray_charles">Ray Charles</string>
  <string name="msg_listen_to_music_without">Listen to music
without restrictions</string>
  <string name="lbl_lorn">Lorn</string>
  <string name="lbl_tracks">Tracks</string>
  <string name="lbl_3_db">3 dB</string>
  <string name="lbl_3_43">3:43</string>
  <string name="lbl_profile">Profile</string>
  <string name="lbl_top">Top</string>
  <string name="lbl_now">NOW</string>
  <string name="lbl">Элджей</string>
  <string name="lbl_trial_version">Trial Version</string>
  <string name="lbl_23_hours">23 hours</string>
  <string name="lbl_velvet_side_a">VELVET: Side A</string>
  <string name="lbl_100_hz">100 Hz</string>
  <string name="lbl_email">Email</string>
  <string name="lbl_equalizer">Equalizer</string>
  <string name="lbl_epic_north">Epic North</string>
  <string name="lbl_200_hz">200 Hz</string>
  <string name="lbl_dashboard">Dashboard</string>
  <string name="lbl_search">Search</string>
  <string name="lbl_1">1</string>
  <string name="lbl_2">2</string>
  <string name="lbl_3">3</string>
  <string name="lbl_4">4</string>
  <string name="msg_david_garcia_diaz">David Garcia Diaz, Andy LaPle\u2026</string>
  <string name="lbl_albums">Albums</string>
  <string name="lbl_ivar_s_revenge">Ivar\u2019s Revenge</string>
  <string name="lbl_artist">Artist</string>
  <string name="lbl_flashbacks">Flashbacks</string>
  <string name="lbl_i_don_t_like_it">I don\u2019t like it</string>
  <string name="lbl_danheim">Danheim</string>
  <string name="lbl_playlists">Playlists</string>
  <string name="lbl_radiance">Radiance</string>
  <string name="lbl_300_hz">300 Hz</string>
  <string name="msg_valid_until_may">Valid until May 23, 2021</string>
  <string name="lbl_view_all">View All</string>
  <string name="lbl_urgent_siege">Urgent Siege</string>
  <string name="lbl_mac_quayle">Mac Quayle</string>
  <string name="lbl_surtr">Surtr</string>
  <string name="lbl_burning">Burning</string>
  <string name="lbl_classical_music">Classical music</string>
  <string name="lbl_artists">Artists</string>
  <string name="lbl_my_settings">My Settings</string>
  <string name="lbl_quit">Quit</string>
  <string name="lbl_sign_in2">Sign In</string>
  <string name="lbl_0_db">0 dB</string>
  <string name="lbl_dance_music">Dance music</string>
  <string name="lbl_favourites">Favourites</string>
  <string name="lbl_password">Password</string>
  <string name="msg_bachman_mail_com">Bachman@mail.com</string>
  <string name="lbl_flower_power">Flower Power</string>
  <string name="lbl_2018">2018</string>
  <string name="lbl_150_hz">150 Hz</string>
  <string name="lbl_top_playlists">Top Playlists</string>
  <string name="lbl_4_db2">-4 dB</string>
  <string name="lbl_damned_anthem">Damned Anthem</string>
  <string name="lbl_my_subscription">My subscription</string>
  <string name="lbl_album">Album</string>
  <string name="lbl_brand_x_music">Brand X Music</string>
  <string name="lbl_wunder_king">Wunder King</string>
</resources>
