<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearProfile"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyle{&quot;name&quot;:&quot;black_900&quot;}">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarAppBar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <ImageView android:id="@+id/imageArrowLeft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrow_left"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrow_left"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTransfer"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_profile"
                style="@style/txtRobotomedium20" tools:text="@string/lbl_profile"/>
            <ImageView android:id="@+id/imageClose"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_close_onprimarycontainer"
                tools:ignore="ContentDescription" tools:src="@drawable/img_close_onprimarycontainer"/>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:id="@+id/linearRestorePurchases"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_24pxh"
            android:paddingStart="@dimen/_24pxh" android:paddingTop="@dimen/_17pxv">
            <LinearLayout android:id="@+id/linearProfileDetails"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="vertical">
                <ImageView android:id="@+id/imageProfileThumbnail"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_97pxh"
                    android:layout_width="@dimen/_97pxh"
                    android:scaleType="centerCrop" circular="@{true}"
                    imageRes="@{@drawable/img_profile_thumbnail}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_profile_thumbnail"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtErlikBachman"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_erlik_bachman"
                    style="@style/txtRobotomedium18" tools:text="@string/lbl_erlik_bachman"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmail"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/msg_bachman_mail_com"
                    style="@style/txtRobotoregular14" tools:text="@string/msg_bachman_mail_com"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearThirtyNine"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_17pxv"
                android:paddingEnd="@dimen/_97pxh"
                android:paddingStart="@dimen/_97pxh"
                android:paddingTop="@dimen/_17pxv" style="@style/groupStyle{&quot;name&quot;:&quot;primaryContainer&quot;}cornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMySubscription"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_my_subscription"
                    style="@style/txtRobotoregular16" tools:text="@string/lbl_my_subscription"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMonth"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/msg_valid_until_may"
                    style="@style/txtRobotoregular14" tools:text="@string/msg_valid_until_may"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:background="@drawable/rectangle_bg_name_primary_radius_6"
                android:ellipsize="end"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:id="@+id/btnRestorePurchases"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_48pxv"
                android:layout_width="@dimen/_342pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@string/msg_restore_purchases"
                android:textAllCaps="false"
                android:textColor="@color/{&quot;name&quot;:&quot;onPrimaryContainer&quot;,&quot;opacity&quot;:1}"
                android:textFontWeight="400"
                android:textSize="@dimen/_16pxh"
                android:textStyle="normal" tools:text="@string/msg_restore_purchases"/>
            <androidx.appcompat.widget.AppCompatButton
                android:background="@drawable/rectangle_bg_name_primary_radius_6"
                android:ellipsize="end"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:id="@+id/btnEnterPromoCode"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_48pxv"
                android:layout_width="@dimen/_342pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@string/msg_enter_promo_code"
                android:textAllCaps="false"
                android:textColor="@color/{&quot;name&quot;:&quot;onPrimaryContainer&quot;,&quot;opacity&quot;:1}"
                android:textFontWeight="400"
                android:textSize="@dimen/_16pxh"
                android:textStyle="normal" tools:text="@string/msg_enter_promo_code"/>
            <androidx.appcompat.widget.AppCompatButton
                android:background="@drawable/rectangle_bg_name_primary_radius_6"
                android:ellipsize="end"
                android:fontFamily="@font/roboto"
                android:gravity="center" android:id="@+id/btnQuit"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_48pxv"
                android:layout_width="@dimen/_342pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@string/lbl_quit"
                android:textAllCaps="false"
                android:textColor="@color/{&quot;name&quot;:&quot;onPrimaryContainer&quot;,&quot;opacity&quot;:1}"
                android:textFontWeight="400"
                android:textSize="@dimen/_16pxh"
                android:textStyle="normal" tools:text="@string/lbl_quit"/>
        </LinearLayout>
    </LinearLayout>
</layout>
