<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearTrialVersion"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyle{&quot;name&quot;:&quot;black_900&quot;}">
        <FrameLayout android:id="@+id/fragmentContainer"
            android:layout_height="match_parent"
            android:layout_weight="1" android:layout_width="match_parent"/>
        <FrameLayout android:gravity="center_horizontal"
            android:id="@+id/frameBottomBar"
            android:layout_height="wrap_content" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearHome"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="vertical">
                <ImageView android:id="@+id/imageHome"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_21pxh"
                    android:layout_width="@dimen/_19pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_nav_home"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_nav_home"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtHome"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@string/lbl_home"
                    style="@style/txtRobotoregular12" tools:text="@string/lbl_home"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearTop"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="vertical">
                <ImageView android:id="@+id/imageTop"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_21pxh"
                    android:layout_width="@dimen/_21pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_nav_top"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_nav_top"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtTop"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@string/lbl_top"
                    style="@style/txtRobotoregular12_2" tools:text="@string/lbl_top"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearFavorites"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="vertical">
                <ImageView android:id="@+id/imageFavorites"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_22pxh"
                    android:layout_width="@dimen/_17pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_nav_favorites"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_nav_favorites"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtFavorites"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@string/lbl_favorites"
                    style="@style/txtRobotoregular12_2" tools:text="@string/lbl_favorites"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearSearch"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="vertical">
                <ImageView android:id="@+id/imageSearch"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_18pxh"
                    android:layout_width="@dimen/_18pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_nav_search"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_nav_search"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtSearch"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@string/lbl_search"
                    style="@style/txtRobotoregular12_2" tools:text="@string/lbl_search"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
