<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearArtist"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyle{&quot;name&quot;:&quot;black_900&quot;}">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarAppBar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <ImageView android:id="@+id/imageArrowLeft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrow_left"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrow_left"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTransfer"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_renaissance"
                style="@style/txtRobotomedium20" tools:text="@string/lbl_renaissance"/>
            <ImageView android:id="@+id/imageMegaphone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_megaphone"
                tools:ignore="ContentDescription" tools:src="@drawable/img_megaphone"/>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:id="@+id/linearBookmark"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_28pxv"
            android:paddingEnd="@dimen/_24pxh"
            android:paddingStart="@dimen/_24pxh" android:paddingTop="@dimen/_28pxv">
            <LinearLayout android:id="@+id/linearRenaissance"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="vertical">
                <ImageButton
                    android:background="@drawable/rectangle_bg_name_onprimarycontainer_opacity_1_radius_19"
                    android:id="@+id/btnBookmark"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_38pxh"
                    android:layout_width="@dimen/_38pxh"
                    android:paddingHorizontal="@dimen/_7pxh"
                    android:paddingVertical="@dimen/_7pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_bookmark" tools:ignore="ContentDescription"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtRenaissance"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_renaissance"
                    style="@style/txtRobotomedium28" tools:text="@string/lbl_renaissance"/>
                <LinearLayout android:gravity="center_vertical"
                    android:id="@+id/linearSixtyFour"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTracksCounter"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_843_tracks"
                        style="@style/txtRobotoregular16_2" tools:text="@string/lbl_843_tracks"/>
                    <View
                        android:background="@drawable/rectangle_bg_name_onprimarycontainer_opacity_0_58_radius_1"
                        android:id="@+id/viewView"
                        android:layout_gravity="bottom"
                        android:layout_height="@dimen/_3pxh" android:layout_width="@dimen/_3pxh"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtAlbumsCounter"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_23_albums"
                        style="@style/txtRobotoregular16_2" tools:text="@string/lbl_23_albums"/>
                </LinearLayout>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:gravity="center_horizontal"
                android:id="@+id/recyclerRenaissance"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                itemSpace="@{@dimen/_24pxh}" tools:itemCount="2" tools:listitem="@layout/row_renaissance"/>
        </LinearLayout>
    </LinearLayout>
</layout>
